RESOLVED FIXED117907
"Refactor adding a line break"
https://bugs.webkit.org/show_bug.cgi?id=117907
Summary "Refactor adding a line break"
WebKit Commit Bot
Reported 2013-06-22 02:58:18 PDT
"Refactor adding a line break" Requested by rhogan on #webkit.
Attachments
Patch (5.73 KB, patch)
2013-06-22 03:05 PDT, Robert Hogan
no flags
Archive of layout-test-results from APPLE-EWS-4 for win-future (813.15 KB, application/zip)
2013-06-22 08:33 PDT, Build Bot
no flags
Patch (5.84 KB, patch)
2013-06-24 11:19 PDT, Robert Hogan
no flags
Robert Hogan
Comment 1 2013-06-22 03:05:16 PDT
Build Bot
Comment 2 2013-06-22 08:33:35 PDT
Comment on attachment 205243 [details] Patch Attachment 205243 [details] did not pass win-ews (win): Output: http://webkit-queues.appspot.com/results/971116 New failing tests: fast/media/mq-transform-03.html fast/forms/search-event-delay.html fast/media/mq-transform-02.html platform/win/accessibility/multiple-select-element-role.html
Build Bot
Comment 3 2013-06-22 08:33:37 PDT
Created attachment 205251 [details] Archive of layout-test-results from APPLE-EWS-4 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: APPLE-EWS-4 Port: win-future Platform: CYGWIN_NT-6.1-WOW64-1.7.20-0.266-5-3-i686-32bit
Ryosuke Niwa
Comment 4 2013-06-24 11:03:30 PDT
Comment on attachment 205243 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=205243&action=review > Source/WebCore/rendering/RenderBlockLineLayout.cpp:2866 > +static inline void addLineBreak(LineWidth& width, InlineIterator& lBreak, RenderObject* object, unsigned offset = 0, int nextBreak = -1) I feel like this function name is too generic. commitLineBreakAtCurrentWidth? breakLineAtCurrentWidth or commitCurrentWidthAsLineBreak?
Robert Hogan
Comment 5 2013-06-24 11:19:47 PDT
WebKit Commit Bot
Comment 6 2013-06-24 13:09:51 PDT
Comment on attachment 205312 [details] Patch Clearing flags on attachment: 205312 Committed r151922: <http://trac.webkit.org/changeset/151922>
WebKit Commit Bot
Comment 7 2013-06-24 13:09:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.