Refactor adding a line break https://bugs.webkit.org/show_bug.cgi?id=117907

Reviewed by Ryosuke Niwa.

Reduce code duplication when adding a line break.

No new tests, refactoring.

* rendering/RenderBlockLineLayout.cpp:
(WebCore::addLineBreak):
(WebCore::RenderBlock::LineBreaker::nextSegmentBreak):


Canonical link: https://commits.webkit.org/136070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151922 268f45cc-cd09-0410-ab3c-d52691b4dbfc